[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urtext"
version = "0.1.6"
description = "Urtext /ˈʊrtekst/ is a markup language and framework for programmable notebooks in text files on top of the Python language."
readme = "readme.md"
dependencies = [
    "anytree",
    "python-dateutil",
    "six"
]

[tool.setuptools.package-data]
"urtext" = ["base_project/*", "starter_project/*"]

[tool.setuptools]
include-package-data = true



